# poetry

./: Docker file  how to start projects.txt
rp-poetry/: pyproject.toml
rp-poetry/rp_poetry/: crud.py  main.py  models.py  schemas.py
